# ATOMICEmulator

./: .gitignore  ATOMICEmulator.files  ATOMICEmulator.includes  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  TODO  asm  aws.servers.list  aws_machines.list  cmake_install.cmake  main.cpp  makefile  run_aws_servers.py  run_emulation.py  servers.list
AtomicSM/AtomicSM.xcodeproj/: project.pbxproj
Proto-ABD/: ABDServer.cpp  ABDServer.hpp  ABD_protocol.cpp  ABD_protocol.hpp  abd_client.cpp  abd_client.hpp
Protocols/: sm_protocol.cpp  sm_protocol.hpp
Protocols/ABD/: abd_client.cpp  abd_client.hpp  abd_protocol.hpp  abd_server.cpp  abd_server.hpp
Protocols/CCHYBRID/: cchybrid-client.cpp  cchybrid_client.cpp  cchybrid_client.hpp  cchybrid_protocol.cpp  cchybrid_protocol.hpp  cchybrid_server.cpp  cchybrid_server.hpp
Protocols/SEMIFAST/: semifast_client.cpp  semifast_client.hpp  semifast_protocol.hpp  semifast_server.cpp  semifast_server.hpp
Server/: arguments.cpp  arguments.h  filesystem.h  set_operations.cpp  sm_common.h  sm_node.cpp
Utilities/: arguments.cpp  arguments.h  filesystem.cpp  set_operations.hpp  sm_common.cpp  sm_common.h  sm_common.h.autosave  sm_node.cpp  sm_node.cpp.autosave  sm_node.h  zhelpers.hpp
backups/output/CCHybrid/: S_10_R_100_test_0.txt.reader1  S_10_R_100_test_0.txt.reader10  S_10_R_100_test_0.txt.reader100  S_10_R_100_test_0.txt.reader11  S_10_R_100_test_0.txt.reader12  S_10_R_100_test_0.txt.reader13  S_10_R_100_test_0.txt.reader14  S_10_R_100_test_0.txt.reader15  S_10_R_100_test_0.txt.reader16  S_10_R_100_test_0.txt.reader17  S_10_R_100_test_0.txt.reader18  S_10_R_100_test_0.txt.reader19  S_10_R_100_test_0.txt.reader2  S_10_R_100_test_0.txt.reader20  S_10_R_100_test_0.txt.reader21  S_10_R_100_test_0.txt.reader22  S_10_R_100_test_0.txt.reader23  S_10_R_100_test_0.txt.reader24  S_10_R_100_test_0.txt.reader25  S_10_R_100_test_0.txt.reader26  S_10_R_100_test_0.txt.reader27  S_10_R_100_test_0.txt.reader28  S_10_R_100_test_0.txt.reader29  S_10_R_100_test_0.txt.reader3  S_10_R_100_test_0.txt.reader30  S_10_R_100_test_0.txt.reader31  S_10_R_100_test_0.txt.reader32  S_10_R_100_test_0.txt.reader33  S_10_R_100_test_0.txt.reader34  S_10_R_100_test_0.txt.reader35  S_10_R_100_test_0.txt.reader36  S_10_R_100_test_0.txt.reader37  S_10_R_100_test_0.txt.reader38  S_10_R_100_test_0.txt.reader39  S_10_R_100_test_0.txt.reader4  S_10_R_100_test_0.txt.reader40  S_10_R_100_test_0.txt.reader41  S_10_R_100_test_0.txt.reader42  S_10_R_100_test_0.txt.reader43  S_10_R_100_test_0.txt.reader44  (+1491 more)
backups/output_1/ABD/: S_10_R_10_test_0.txt.reader1  S_10_R_10_test_0.txt.reader10  S_10_R_10_test_0.txt.reader2  S_10_R_10_test_0.txt.reader3  S_10_R_10_test_0.txt.reader4  S_10_R_10_test_0.txt.reader5  S_10_R_10_test_0.txt.reader6  S_10_R_10_test_0.txt.reader7  S_10_R_10_test_0.txt.reader8  S_10_R_10_test_0.txt.reader9  S_10_R_10_test_0.txt.writer  S_10_R_10_test_1.txt.reader1  S_10_R_10_test_1.txt.reader10  S_10_R_10_test_1.txt.reader2  S_10_R_10_test_1.txt.reader3  (+7 more)
scripts/: kill_servers.sh  run_server.sh  run_server_ubuntu.sh  term.sh
(+24 files in other folders)
